# Orion

./: .env  Dockerfile  README.md  TeamOrion_Log Intelligence Assistant (1).docx  main.py  parsed_log.csv  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: main_orion.yml
.streamlit/: config.toml
app/: config.py  main.py
app/anomaly/: detector.py
app/data/: sample_logs.py
app/data/chroma/: chroma.sqlite3
app/guardrails/: pii_masker.py
app/ingestion/: parser.py  vector_store.py
app/llm/: client.py
app/observability/: metrics.py
app/rag/: engine.py
app/rca/: agent.py
app/ui/: anomaly_view.py  log_upload.py  observability.py  rag_view.py  rca_view.py  sidebar.py
data/chroma/3e67321c-2244-451e-a137-39deab38de8b/: index_metadata.pickle
tests/: test_core.py
